# fake_planner

./: CMakeLists.txt  README.md  package.xml
include/fake_planner/: FakePlanner.h
launch/: fake_planner.launch
src/: FakePlanner.cpp  fake_planner_node.cpp
srv/: SetMaxVel.srv
